# parser_fastcabinet

./: .gitignore  pyproject.toml  pytest.ini  setup.cfg
src/: main.py  scraper.py  selenium_driver.py  settings.py
