[tool.poetry]
name = "parser-fastcabinetdoors"
version = "0.1.0"
description = ""
authors = ["kleikoks <kleikoks.py@gmail.com>"]
readme = "README.md"
packages = [{include = "parser_fastcabinetdoors"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
mdutils = "^1.4.0"
bs4 = "^0.0.1"
urllib3 = "^1.26.14"
pillow = "^9.4.0"
selenium = "^4.8.0"
webdriver-manager = "^3.8.5"
selenium-wire = "^5.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^7.2.1"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
